feat: produce table and sankey of clade changes

--- a/dataset-test/Snakefile
+++ b/dataset-test/Snakefile
@@ -104,5 +104,7 @@ rule clade_changes:
     input:
         old = "nextclade_old_clades.tsv",
         new = "nextclade_new_clades.tsv"
-    output: "sankey.pdf"
+    output: 
+        plot = "sankey.pdf",
+        table = "clade_changes.tsv"
     shell: "python scripts/sankey.py"
